# sala-tpv

./: .dockerignore  .env  .env.example  .gitignore  .tool-versions  Dockerfile  README.md  build.sh  db.sqlite3  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docker-check.yml  format.yml  lint.yml  manual-checks.yml
apps/business_config/: admin.py  apps.py  forms.py  helpers.py  models.py  services.py  signals.py  tests.py
apps/business_config/migrations/: 0001_initial.py  0002_backfill_business_configuration.py  0003_alter_possettings_allow_manual_price_and_more.py  0004_alter_businessprofile_email_and_more.py  0005_possettings_enable_stock_control_and_more.py
apps/cash_register/: apps.py
apps/catalog/: admin.py  forms.py  models.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_category_idx_cat_bus_active_ord_and_more.py
apps/core/: admin.py  isolation.py  models.py  querysets.py  tests.py  views.py
apps/core/migrations/: 0001_initial.py
apps/stores/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/stores/migrations/: 0001_initial.py  0002_alter_stores_options_stores_business_stores_code_and_more.py  0003_rename_stores_to_store.py  0003_stores_address_line_1_stores_address_line_2_and_more.py  0004_store_address_line_1_store_address_line_2_store_city_and_more.py
apps/users/: admin.py  forms.py  helpers.py  isolation.py  managers.py  mixins.py  models.py  querysets.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_customuser_date_joined_customuser_pin_hash_and_more.py  (+1 more)
config/: urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/: .gitignore  README.md
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/js/: app.js
templates/: base.html
tests/: test_smoke.py
(+12 files in other folders)
