[project]
name = "sala-tpv"
version = "0.1.0"
description = "TPV para negocio local desarrollado con Django"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dj-database-url>=2.2",
    "django>=6.0.4,<6.1",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "whitenoise>=6.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
test = "python manage.py test"
django-check = "python manage.py check"
migrations-check = "python manage.py makemigrations --check --dry-run"
verify = [
    "lint",
    "format-check",
    "django-check",
    "migrations-check",
    "test",
]
run = "python manage.py runserver 0.0.0.0:8000"